# homepage

./: 404.html  CNAME  README.md  book.toml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: mdbook.yml
contact/: index.html
docs/: CNAME  contact.md  index.md  pgp.md  projects.md
pgp/: index.html
projects/: index.html
resources/: B6F27F60.asc
search/: search_index.json
src/: SUMMARY.md  about.md  desktop.md  embedded.md  libraries.md  photography.md  publications.md  software.md  terminal.md  web.md
src/software/: bkp.md  digitout.md  galgen.md  git-rsync.md  gridview.md  indentedlogs.md  kickoff.md  kurde.md  more.md  mpy-temp-humi.md  para-cada.md  peepshow.md  plany.md  pylfsr.md  quickcmd.md  retro-clock.md  rtic-mickey-mouse.md  saml-mock.md  scar.md  tibidi.md  ttype.md  ut50e-dashboard.md  weather-data.md  x-strings.md  xfiles.md
theme/: index.hbs
