[tool.poetry]
name = "homepage"
version = "1.0.0"
description = "Personal home page."
authors = ["Grzegorz Krasoń <grzegorz.krason@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.0.4"

[tool.poetry.dev-dependencies]
mkdocs = "^1.0.4"
mkdocs-ivory = "^0.4.0"
mkdocs-material = "^4.6.2"
mkdocs-bootswatch = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
